# stylish-cabal

./: .ghci  .gitattributes  .gitignore  .gitmodules  .travis.yml  ChangeLog.md  LICENSE  Main.hs  README.md  STYLE.md  build-all.nix  build-all.sh  default.nix  hie.sh  package.yaml  shell.nix  stylish-cabal.cabal
src/: Comment.hs  Field.hs  FieldValue.hs  GenPrinters.hs  Parse.hs  Pretty.hs  PrintContext.hs  Render.hs  StylishCabal.hs  Transform.hs
src/Parse/: Fields.hs
src/Pretty/: Class.hs
src/Render/: Lib.hs  Options.hs
src/Render/Lib/: Haddock.hs
src/Stylish/: Class.hs  Monad.hs
src/Types/: Block.hs  Field.hs
tests/: Main.hs  SortedDesc.hs  TestCommon.hs  example-out.cabal  example.cabal  hackage.hs  hlint.hs  parser.hs  roundtrip.hs
tests/Instances/: TreeDiff.hs
tests/Instances/TreeDiff/: Language.hs  SPDX.hs  Version.hs
tests/cabal-files/: deepseq-bounded.txt  example  example-out.txt  example.txt  exposed-containers.txt  helics.txt  hpc-coveralls  jsaddle.txt
tests/files/: hexchat.txt
tests/roundtrip/: Hackage.hs  Main.hs  SortedDesc.hs  Utils.hs
tests/strictness/: Instances.hs  Main.hs  Pretty.hs
tests/utils/: Expectations.hs  MultiSet.hs  SortedPackageDescription.hs
tests/utils/SortedPackageDescription/: TH.hs
