name:               stylish-cabal
version:            0.1.0.0
synopsis:           Format Cabal files
description:        A tool for nicely formatting your Cabal file.
license:            BSD3
license-file:       LICENSE
author:             Jude Taylor
maintainer:         me@jude.xyz
category:           Language
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      >=1.10

source-repository head
  type:     git
  location: https://github.com/pikajude/stylish-cabal.git

flag exhaustive-check
  default:     False
  manual:      True
  description: Should I test all Hackage cabal files?

library
  exposed-modules:    StylishCabal
  other-modules:      Parse
                      Render
                      Render.Lib
                      Transform
                      Types.Block
                      Types.Field
  hs-source-dirs:     src
  build-depends:      base == 4.*, Cabal == 2.*, ansi-wl-pprint, deepseq, split
  default-language:   Haskell2010
  default-extensions: NoMonomorphismRestriction
  ghc-options:        -Wall -Werror -Wno-missing-signatures

executable stylish-cabal
  main-is:          Main.hs
  build-depends:    base, ansi-wl-pprint, optparse-applicative, stylish-cabal
  default-language: Haskell2010
  ghc-options:      -Wall -Werror

test-suite strictness
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      Instances
                      Pretty
  hs-source-dirs:     tests/strictness
  build-depends:      base
                    , Cabal
                    , StrictCheck
                    , ansi-wl-pprint
                    , bytestring
                    , deepseq
                    , generics-sop
                    , hspec
                    , hspec-expectations-pretty-diff
                    , stylish-cabal
  default-language:   Haskell2010
  default-extensions: CPP

  if impl(ghc <8.2)
    buildable: False
  else
    ghc-options: -freduction-depth=0

test-suite brute-force
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    SortedDesc
  hs-source-dirs:   tests
  build-depends:    base
                  , Cabal
                  , HUnit
                  , aeson
                  , ansi-wl-pprint
                  , async
                  , containers
                  , hspec
                  , hspec-core
                  , hspec-expectations-pretty-diff
                  , lens
                  , optparse-applicative
                  , stylish-cabal
                  , temporary
                  , utf8-string
                  , wreq
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall

  if flag(exhaustive-check)
    buildable: True
  else
    buildable: False
