cabal-version:      2.2
-- this is the package name
name:               stylish-cabal
version:            0.5.0.0
synopsis:           Format Cabal files
description:        A tool for nicely formatting your Cabal file.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jude Taylor
maintainer:         me@jude.xyz
tested-with:        GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2,
                    GHC == 8.2.2, GHC == 8.4.3
category:           Language
build-type:         Simple
extra-source-files: ChangeLog.md

common default-flags
  ghc-options: -Wall -Wcompat -threaded
  default-language: Haskell2010

library
  import: default-flags
  exposed-modules:    Parse, Pretty, StylishCabal
  hs-source-dirs:     src
  build-depends:      base            == 4.*
                    , Cabal           ^>= 2.3
                    , ansi-wl-pprint
                    -- we need bytestring because it's a dependency
                    , bytestring
                    , mtl
                    , utf8-string
                    , parsec
