cabal-version:      2.2
name:               stylish-cabal
version:            0.5.0.0
synopsis:           Format Cabal files
description:        A tool for nicely formatting your Cabal file.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jude Taylor
maintainer:         me@jude.xyz
tested-with:        GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2,
                    GHC == 8.2.2, GHC == 8.4.3
category:           Language
build-type:         Simple
extra-source-files: ChangeLog.md

common default-flags
  ghc-options: -Wall -Wcompat
  default-extensions: NoMonomorphismRestriction
  default-language: Haskell2010

library
  import: default-flags
  exposed-modules:    Parse Pretty StylishCabal Stylish.Class Stylish.Monad Comment
  hs-source-dirs:     src
  build-depends:      base            == 4.*
                    , Cabal           ^>= 2.3
                    , ansi-wl-pprint
                    -- a comment in a build-depends? nani??
                    , bytestring
                    , mtl
                    , utf8-string
                    , parsec

test-suite hackage
  import: default-flags
  ghc-options: -threaded
  main-is: hackage.hs
  type: exitcode-stdio-1.0
  build-depends: base, Cabal, hspec, ansi-wl-pprint, stylish-cabal, HUnit, tar, tree-diff
  hs-source-dirs: tests
